Config -> ConfigBase. Added test config class to Arctium.Manager. Added default.props (shared project properties).

--- a/src/Arctium.Core/src/Arctium.Core.csproj
+++ b/src/Arctium.Core/src/Arctium.Core.csproj
@@ -17,4 +17,8 @@
     <AssemblyName>Arctium.Core</AssemblyName>
     <RootNamespace>Arctium.Core</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\deps\src\Lappa.ORM\src\Lappa.ORM\Lappa.ORM.csproj" />
+  </ItemGroup>
 </Project>
